# fices

./: CMakeLists.txt  main.cpp
includes/: context.h  game_app.h
includes/components/: block.h  camera.h  chunk_block_set.h  mesh.h  tag.h  transform.h
includes/entities/: camera.h  chunk.h  player.h
includes/events/: chunk_generate_event.h  chunk_remove_event.h  eye_move_event.h  game_quit_event.h  move_event.h
includes/glad/: glad.h
includes/scenes/: game_scene.h  scene.h
includes/systems/: chunk_system.h  debug_system.h  input_system.h  player_system.h  render_system.h
includes/utils/: math.h  random.h  shader.h  texture.h  vertex.h
includes/window/: window.h
shaders/: chunk.frag  chunk.vert
sources/: chunk_system.cpp  context.cpp  debug_system.cpp  game_app.cpp  game_scene.cpp  glad.c  input_system.cpp  player_system.cpp  random.cpp  render_system.cpp  shader.cpp  texture.cpp  window.cpp
